package com.example.objects.chap1;

import java.time.LocalDateTime;

public class Invitation {
    private LocalDateTime when;
}
