package com.example.objects.chap1;

public class Ticket {
    private Long fee;

    public Long getFee() {
        return fee;
    }
}
